himalayawellness.com (archived on 2019-06-06)
{
  "alexa_rank": 121316,
  "analysis_subcorpus": true,
  "categories": "education;travel",
  "char_count": 11573,
  "classifier_probability": 0.94,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.1,
  "homepage_snapshot_redirected_domain": "himalayawellness.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20190331030242id_/http://www.himalayawellness.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20190331030242id_/http%3A//himalayawellness.com",
  "interval": "2019_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "himalayawellness.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20190606032324id_/http%3A//www.himalayawellness.com/privacy-policy.htm",
  "policy_title": "Privacy Policy - The Himalaya Drug Company",
  "policy_url": "himalayawellness.com/privacy-policy.htm",
  "sha1": "d50e975c2b58b4a1cabf01dcc106a38bb68922a2",
  "simhash": 2420870799948398803,
  "simhash_updated": true,
  "site_hostname": "himalayawellness.com",
  "site_url": "http://himalayawellness.com",
  "smog": 14.6,
  "strict_updated": true,
  "timestamp": "20190606032324",
  "word_count": 1961,
  "year": 2019
}

--- a/h/hi/him/himalayawellness.com.html
+++ b/h/hi/him/himalayawellness.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the himalayawellness.com privacy policy that was archived on 2018-12-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181220124004id_/http%3A//www.himalayawellness.com/privacy-policy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the himalayawellness.com privacy policy that was archived on 2019-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190606032324id_/http%3A//www.himalayawellness.com/privacy-policy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><!-- InstanceBegin template="/Templates/HH-INNERPAGE.dwt" codeOutsideHTMLIsLocked="false" --><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -229,7 +229,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <h6 class="mobilemenuheader">products</h6>
                   <div class="toggle-content" style="display: none;">
                     <ul class="footer-child">
-                    	<li class="moms"><a href="products/himalayamom/index.html" style="color: #ffffff!important;">Himalaya Mom</a></li>
+                    	<li class="moms"><a href="products/himalayaformoms/index.html" style="color: #ffffff!important;">Himalaya FOR MOMS</a></li>
                       <li><a href="products/pharmaceuticals/index.htm">pharmaceuticals</a></li>
                       <li><a href="products/wellness/index.html">wellness</a></li>
                       <li><a href="products/personalcare/index.htm">personal care</a></li>
@@ -246,7 +246,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <h6 class="mobilemenuheader"><a href="faqs.htm">FAQS</a></h6>
                 <h6 class="mobilemenuheader"><a href="careers/index.htm">careers</a></h6>
                 <h6 class="mobilemenuheader"><a href="newsletter/index.htm">newsletter</a></h6>
-                <h6 class="mobilemenuheader"><a href="http://www.himalayastore.com/">shop</a></h6>
+                <h6 class="mobilemenuheader"><a href="http://www.himalayawellness.in/">shop</a></h6>
                 </div>
               </div>
             </div>
@@ -258,7 +258,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		<li><a href="aboutus/index.htm"><img src="img/about-us.gif" alt="ABOUT US"></a></li>
 		<li><a href="products/index.htm"><img src="img/products.gif" alt="PRODUCTS"></a>
         <ul>
-        		<li class="moms"><a href="products/himalayamom/index.html" alt="Himalaya Mom">HIMALAYA MOM</a></li>
+        		<li class="moms"><a href="products/himalayaformoms/index.html" alt="Himalaya FOR MOMS">Himalaya FOR MOMS</a></li>
                 <li><a href="products/pharmaceuticals/index.htm" alt="Pharmaceuticals">PHARMACEUTICALS</a></li>
                 <li><a href="products/wellness/index.html" alt="WELLNESS">WELLNESS</a></li>
                 <li><a href="products/personalcare/index.htm" alt="Personal Care">PERSONAL CARE</a></li>
@@ -273,7 +273,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		<li><a href="responsibility/index.htm"><img src="img/responsibility.gif" alt="RESPONSIBILITY"></a></li>
 		<li><a href="newsroom/index.htm"><img src="img/media-center.gif" alt="MEDIA CENTER"></a></li>
 		<li><a href="store-locator.asp"><img src="img/store-locator.gif" alt="STORE LOCATOR"></a></li>
-		<li><a href="http://www.himalayastore.com" target="_blank"><img src="img/shop.gif" alt="SHOP"></a></li>
+		<li><a href="http://www.himalayawellness.in" target="_blank"><img src="img/shop.gif" alt="SHOP"></a></li>
 	</ul>
 </nav><!-- end #main-nav -->
 </header><!-- end #header -->
@@ -509,7 +509,7 @@ These details will be printed on the shipment labels for facilitating the delive
 	<div class="container">
 
 		<ul>
-			<li>Copyright © 2018 The Himalaya Drug company</li>
+			<li>Copyright © 2019 The Himalaya Drug company</li>
 			<li><a href="privacy-policy.htm">Privacy Policy</a></li>
 			<li><a href="terms-of-use.htm">Terms of Use</a></li>
 			<li><a href="sitemap.htm">Sitemap</a></li>
