emulator-zone.com (archived on 2019-06-06)
{
  "alexa_rank": 21387,
  "analysis_subcorpus": true,
  "categories": "games;informationtech",
  "char_count": 2178,
  "classifier_probability": 0.78,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "fairly_difficult",
  "flesch_kincaid": 10.55,
  "homepage_snapshot_redirected_domain": "emulator-zone.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20190405084308id_/https://www.emulator-zone.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20190405084308id_/http%3A//emulator-zone.com",
  "interval": "2019_A",
  "link_text": "Privacy Statement",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "emulator-zone.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20190606061301id_/http%3A//www.emulator-zone.com/doc.php/privacy.html",
  "policy_title": "Privacy Statement",
  "policy_url": "emulator-zone.com/doc.php/privacy.html",
  "sha1": "ddccc17bdbb3a562a475d438d95a2b8add416add",
  "simhash": 17096541665587695640,
  "simhash_updated": false,
  "site_hostname": "emulator-zone.com",
  "site_url": "http://emulator-zone.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20190606061301",
  "word_count": 363,
  "year": 2019
}

--- a/e/em/emu/emulator-zone.com.html
+++ b/e/em/emu/emulator-zone.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the emulator-zone.com privacy policy that was archived on 2018-12-27.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181227222916id_/http%3A//www.emulator-zone.com/doc.php/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the emulator-zone.com privacy policy that was archived on 2019-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190606061301id_/http%3A//www.emulator-zone.com/doc.php/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html><head>
     <title>Privacy Statement</title>
@@ -7,7 +7,7 @@
     <link rel="alternate" type="application/rss+xml" title="Emulator Zone RSS" href="/rss_news.php">
     
     <meta name="robots" content="noindex, noarchive">
-    <script type="text/javascript" async="" src="https://apis.google.com/js/plusone.js"></script><script src="https://secure.quantserve.com/quant.js" async="" type="text/javascript"></script><script async="" src="https://www.google-analytics.com/analytics.js"></script><script>
+    <script src="https://secure.quantserve.com/quant.js" async="" type="text/javascript"></script><script async="" src="https://www.google-analytics.com/analytics.js"></script><script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
             (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
             m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -239,17 +239,6 @@ concerning the practices of this site, feel free to contact us at:
 
 </td></tr>
 
-<tr><td class="sidebar_sectionheader">L I K E &nbsp; T H I S &nbsp; P A G E ?</td></tr>
-<tr><td class="sidebar_section">
-
-<div class="sidebar_itemblock">
-<div align="center">
-<g:plusone></g:plusone>
-</div>
-</div>
-
-</td></tr>
-
 <tr><td class="sidebar_sectionheader">T O P &nbsp; D O W N L O A D S</td></tr>
 <tr><td class="sidebar_section">
 
@@ -258,11 +247,11 @@ concerning the practices of this site, feel free to contact us at:
 <b>›</b> <a target="_top" href="/doc.php/nds/desmume.html">DeSmuME 0.9.11</a><br>
 <b>›</b> <a target="_top" href="/doc.php/psx/ssspsx.html">SSSPSX 0.0.34</a><br>
 <b>›</b> <a target="_top" href="/doc.php/ps2/pcsx2.html">PCSX2 1.4.0</a><br>
-<b>›</b> <a target="_top" href="/doc.php/n64/project64.html">Project64 1.6</a><br>
 <b>›</b> <a target="_top" href="/doc.php/genesis/fusion.html">Fusion 3.64</a><br>
-<b>›</b> <a target="_top" href="https://www.emulator-zone.com/snes/zsnes">ZSNES 1.51</a><br>
+<b>›</b> <a target="_top" href="/doc.php/n64/project64.html">Project64 1.6</a><br>
 <b>›</b> <a target="_top" href="/doc.php/psx/epsxe.html">ePSXe 2.0.5</a><br>
 <b>›</b> <a target="_top" href="/doc.php/gba/vboyadvance.html">VBA-M 2.0.0-beta2</a><br>
+<b>›</b> <a target="_top" href="https://www.emulator-zone.com/snes/zsnes">ZSNES 1.51</a><br>
 <b>›</b> <a target="_top" href="/doc.php/gamecube/dolphin.html">Dolphin 5.0</a><br>
 </div>
 
@@ -281,7 +270,7 @@ concerning the practices of this site, feel free to contact us at:
     </tbody></table>
 
     <span class="text_copyright">
-Copyright © 1997-2017 Visei Internet. All rights reserved. No part of this website may be reproduced without permission.
+Copyright © 1997-2019 Visei Internet. All rights reserved. No part of this website may be reproduced without permission.
 <br>
 This website is not affiliated with any video game company. All patents and trademarks are owned by their respective holders.
  <a href="/doc.php/privacy.html">Privacy Statement</a>
@@ -316,14 +305,6 @@ This website is not affiliated with any video game company. All patents and trad
     </div>
 </noscript>
 <!-- End Quantcast tag -->
-
-<script type="text/javascript">
-    (function() {
-        var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
-        po.src = 'https://apis.google.com/js/plusone.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
-    })();
-</script>
 
 <!-- Begin Cookie Consent plugin by Silktide - http://silktide.com/cookieconsent -->
 <link rel="stylesheet" type="text/css" href="http://assets.cookieconsent.silktide.com/current/style.min.css">
