--- a/d/do/dow/downduck.com.html
+++ b/d/do/dow/downduck.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the downduck.com privacy policy that was archived on 2018-12-31.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181231034645id_/http%3A//www.downduck.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the downduck.com privacy policy that was archived on 2019-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190606073604id_/http%3A//www.downduck.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <link rel="stylesheet" href="/templates/treasureland/css/style.css" type="text/css">
@@ -305,11 +305,8 @@ document.write(d);
 <script>
     $(document).ready(function(){
             $('[id^="text_story"]').click(function() {
-    //window.location.href = "http://www.duck-quack.com/AF_TA/rel/index.cfm?RST=UNF&TAD=429583&dl=am";
     keyword = $(this).attr('key');
-    window.location.href = "http://redirect.admeerkat.com/?id=2&sn=download&a_aid=10834&a_bid=52d1eec5&fn="+keyword;;   
-// window.location.href = "http://redirect.adraccoon.com/?id=2&sn=download&a_aid=10834&a_bid=52d1eec5&fn="+keyword;;        
-   // window.location.href = "http://www.duck-quack.com/AF_TA/rel/index.cfm?TAD=433598&fn="+keyword;
+    window.location.href = "https://www.friendlyduck.com/AF_TA/rel/index.cfm?RST=UNF&TAD=433598&fn="+keyword;
       });
     });
 </script>
