--- a/a/at/ata/atavi.com.html
+++ b/a/at/ata/atavi.com.html
@@ -1,19 +1,24 @@
-<!--The following is the downloaded HTML source of the atavi.com privacy policy that was archived on 2018-04-01.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20180401092903id_/https%3A//atavi.com/content/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the atavi.com privacy policy that was archived on 2019-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190606074746id_/https%3A//atavi.com/content/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<meta charset="utf-8">
 		
-		<link rel="stylesheet" type="text/css" href="/c/content.terms.css?v=c9f1e198&#10;">
-<link rel="stylesheet" type="text/css" href="/c/content.css?v=c9f1e198&#10;">
-<link rel="stylesheet" type="text/css" href="/c/fonts.css?v=c9f1e198&#10;">
-<link rel="stylesheet" type="text/css" href="/c/yaml/core/base.min.css?v=c9f1e198&#10;">
-<link rel="stylesheet" type="text/css" href="/c/base.css?v=c9f1e198&#10;">
-<script async="" src="https://connect.facebook.net/en_US/fbevents.js"></script><script type="text/javascript" async="" id="topmailru-code" src="https://top-fwz1.mail.ru/js/code.js"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript" async="" src="https://mc.yandex.ru/metrika/watch.js"></script><script type="text/javascript" src="/j/jquery/jquery-1.10.2.min.js"></script>
+		<link rel="stylesheet" type="text/css" href="/c/content.terms.css?v=a0903503&#10;">
+<link rel="stylesheet" type="text/css" href="/c/content.css?v=a0903503&#10;">
+<link rel="stylesheet" type="text/css" href="/c/fonts.css?v=a0903503&#10;">
+<link rel="stylesheet" type="text/css" href="/c/yaml/core/base.min.css?v=a0903503&#10;">
+<link rel="stylesheet" type="text/css" href="/c/base.css?v=a0903503&#10;">
+<script async="" src="https://connect.facebook.net/en_US/fbevents.js"></script><script type="text/javascript" async="" id="topmailru-code" src="https://top-fwz1.mail.ru/js/code.js"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript" async="" src="https://mc.yandex.ru/metrika/watch.js"></script><script async="" src="https://www.googletagmanager.com/gtm.js?id=GTM-KN9BKQH"></script><script type="text/javascript" src="/j/jquery/jquery-1.10.2.min.js"></script>
 <script type="text/javascript" src="/j/jquery/jquery.yiiactiveform.js"></script>
 <script type="text/javascript" src="/j/jquery/jquery-ui-1.10.3.min.js"></script>
-<script type="text/javascript" src="/j/toppage-core.js?v=c9f1e198&#10;"></script>
+<script type="text/javascript" src="/j/toppage-core.js?v=a0903503&#10;"></script>
+<script type="text/javascript">
+/*<![CDATA[*/
+toppage.preinit({"pageid":"a11a05c04c27186f27079c0a3a06e091","hostname":"atavi.com","domain":"atavi.com","userid":0,"groupid":0,"groupidbyurl":1,"columns":{"min":2,"max":10,"default":6,"start":6},"timestamp":1559807266,"lang":"en","comet":{"initialId":"1559807266372441","channels":[""],"protocol":"https"},"bookmark":{"view":"sketch","share":""},"dict":{"startpopuptitle":"Welcome to Atavi","ajaxerrortitle":"Processing request ...","ajaxerrortext":"Unfortunately, an error has occurred on the server! Please try again later.","unprotecttitle":"Request access to the group"},"lp":"","webstorelink":{"atavibookmarkmanager":"https:\/\/chrome.google.com\/webstore\/detail\/jpchabeoojaflbaajmjhfcfiknckabpo","themeofnewtab":"https:\/\/chrome.google.com\/webstore\/detail\/ofmacdiceehcibkfednmgpkhgfhpacgi"}});
+/*]]>*/
+</script>
 <title>Atavi - bookmark manager</title>
 
 		<!-- fonts -->
@@ -24,7 +29,16 @@
 		<![endif]-->
 		
 		<!-- scripts -->
-				<!--[if lt IE 9]>
+		
+        <!-- Google Tag Manager -->
+        <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+                new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+                j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+                'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+            })(window,document,'script','dataLayer','GTM-KN9BKQH');</script>
+        <!-- End Google Tag Manager -->
+
+		<!--[if lt IE 9]>
 		<script src="/j/vendor/respond.js"></script>
 		<style>body .tp-shadow10, body .tp-shadow10:hover {box-shadow: none}</style>
 		<![endif]-->
@@ -81,7 +95,12 @@
 			</head>
 	
 		<body class="" style="">
-		
+
+        <!-- Google Tag Manager (noscript) -->
+        <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KN9BKQH"
+                          height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+        <!-- End Google Tag Manager (noscript) -->
+
 		
 <div id="background"><span class="sp1"></span><span class="sp2"></span></div>
 		
@@ -290,6 +309,9 @@
 			Privacy Policy
 		</h1>
 		<p>
+			The service is provided by SOFTLAB CORP.LLP (hereinafter referred to as "We", "Our", in any case and number, "SOFTLAB CORP.LLP "), registered at the following address: LAS SUITE 5 PERCY STREET, FITZROVIA, LONDON, ENGLAND, W1T 1DG; Legal entity registration number: OC392736.
+		</p>
+		<p>
 			Atavi.com is committed to protecting your personal information when you are using Atavi services.
 		</p>
 		<p>
@@ -486,21 +508,21 @@
 				
 		<script>$(function() {toppage.assistant.popupVk()});</script>
 		
-	<script type="text/javascript" src="/assets/e472438f/js/auth.js?v=c9f1e198&#10;"></script>
-<script type="text/javascript" src="/j/helpers.js?v=c9f1e198&#10;"></script>
-<script type="text/javascript" src="/j/jquery/jquery.cookie.min.js?v=c9f1e198&#10;"></script>
-<script type="text/javascript" src="/j/jquery/jquery.form.js?v=c9f1e198&#10;"></script>
-<script type="text/javascript" src="/j/jquery/jquery.placeholderpatch.js?v=c9f1e198&#10;"></script>
-<script type="text/javascript" src="/j/jquery/jquery.pnotify.min.js?v=c9f1e198&#10;"></script>
-<script type="text/javascript" src="/j/jquery/jquery.icheck.min.js?v=c9f1e198&#10;"></script>
-<script type="text/javascript" src="/j/toppage.assistant.js?v=c9f1e198&#10;"></script>
-<script type="text/javascript" src="/j/jquery/jquery.nanoscroller.min.js?v=c9f1e198&#10;"></script>
-<script type="text/javascript" src="/j/jquery/jquery.liteuploader.js?v=c9f1e198&#10;"></script>
-<script type="text/javascript" src="/j/jquery/jquery.colorpicker.js?v=c9f1e198&#10;"></script>
-<script type="text/javascript" src="/j/jquery/jquery.yiiactiveform.js?v=c9f1e198&#10;"></script>
+	<script type="text/javascript" src="/assets/b0042442/js/auth.js?v=a0903503&#10;"></script>
+<script type="text/javascript" src="/j/helpers.js?v=a0903503&#10;"></script>
+<script type="text/javascript" src="/j/jquery/jquery.cookie.min.js?v=a0903503&#10;"></script>
+<script type="text/javascript" src="/j/jquery/jquery.form.js?v=a0903503&#10;"></script>
+<script type="text/javascript" src="/j/jquery/jquery.placeholderpatch.js?v=a0903503&#10;"></script>
+<script type="text/javascript" src="/j/jquery/jquery.pnotify.min.js?v=a0903503&#10;"></script>
+<script type="text/javascript" src="/j/jquery/jquery.icheck.min.js?v=a0903503&#10;"></script>
+<script type="text/javascript" src="/j/toppage.assistant.js?v=a0903503&#10;"></script>
+<script type="text/javascript" src="/j/jquery/jquery.nanoscroller.min.js?v=a0903503&#10;"></script>
+<script type="text/javascript" src="/j/jquery/jquery.liteuploader.js?v=a0903503&#10;"></script>
+<script type="text/javascript" src="/j/jquery/jquery.colorpicker.js?v=a0903503&#10;"></script>
+<script type="text/javascript" src="/j/jquery/jquery.yiiactiveform.js?v=a0903503&#10;"></script>
 <script type="text/javascript">
 /*<![CDATA[*/
-toppage.init({"pageid":"f90f6b1d75f77f48ebb4ea3b1581dd72","hostname":"atavi.com","domain":"atavi.com","userid":0,"groupid":0,"groupidbyurl":1,"columns":{"min":2,"max":10,"default":6,"start":6},"timestamp":1522574944,"lang":"en","comet":{"initialId":"1522574944030764","channels":[""],"protocol":"https"},"bookmark":{"view":"sketch","share":""},"dict":{"startpopuptitle":"Welcome to Atavi","ajaxerrortitle":"Processing request ...","ajaxerrortext":"Unfortunately, an error has occurred on the server! Please try again later.","unprotecttitle":"Request access to the group"},"lp":"","webstorelink":{"atavibookmarkmanager":"https:\/\/chrome.google.com\/webstore\/detail\/jpchabeoojaflbaajmjhfcfiknckabpo","themeofnewtab":"https:\/\/chrome.google.com\/webstore\/detail\/ofmacdiceehcibkfednmgpkhgfhpacgi"}});
+toppage.init();
 toppage.popup.init('a.js-popup-box');
 jQuery(function($) {
 jQuery('#user-form').yiiactiveform({'validateOnChange':false,'validateOnSubmit':true,'afterValidate':toppage.user.loginCallback,'attributes':[{'id':'LoginForm_username','inputID':'LoginForm_username','errorID':'LoginForm_username_em_','model':'LoginForm','name':'username','enableAjaxValidation':true},{'id':'LoginForm_password','inputID':'LoginForm_password','errorID':'LoginForm_password_em_','model':'LoginForm','name':'password','enableAjaxValidation':true}],'errorCss':'error'});
