--- a/g/gr/gre/greatis.com.html
+++ b/g/gr/gre/greatis.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the greatis.com privacy policy that was archived on 2018-12-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181206194423id_/http%3A//www.greatis.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the greatis.com privacy policy that was archived on 2019-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190606084504id_/http%3A//greatis.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>Privacy Policy - Greatis Software</title>
