coinbulb.com (archived on 2019-06-06)
{
  "alexa_rank": 40101,
  "analysis_subcorpus": true,
  "categories": "business;economyandfinance",
  "char_count": 3695,
  "classifier_probability": 0.88,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.08,
  "homepage_snapshot_redirected_domain": "coinbulb.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20190331151502id_/http://www.coinbulb.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20190331151502id_/http%3A//coinbulb.com",
  "interval": "2019_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "coinbulb.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20190606112918id_/http%3A//www.coinbulb.com/privacypolicy",
  "policy_title": "CoinBulb | Earn Bitcoin - Bitcoin Advertising - Bitcoin PTC",
  "policy_url": "coinbulb.com/privacypolicy",
  "sha1": "91f07ffbd4bf50a1c5dd20e2b1251551de32262c",
  "simhash": 11373425132262621470,
  "simhash_updated": false,
  "site_hostname": "coinbulb.com",
  "site_url": "http://coinbulb.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20190606112918",
  "word_count": 617,
  "year": 2019
}

--- a/c/co/coi/coinbulb.com.html
+++ b/c/co/coi/coinbulb.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the coinbulb.com privacy policy that was archived on 2018-12-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181230163432id_/https%3A//coinbulb.com/privacypolicy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the coinbulb.com privacy policy that was archived on 2019-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190606112918id_/http%3A//www.coinbulb.com/privacypolicy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 
@@ -278,6 +278,7 @@ div.section-tout{padding:0px;}
 <li style="position:relative;"><span class="spanNum"></span><a id="clicknews" href="https://coinbulb.com/news" class="hvr-underline-from-center"><i class="glyphicon glyphicon-list-alt"></i> &nbsp;News</a></li>
 
 
+<!-- a -->
 
 </ul>
 <script>
@@ -433,12 +434,12 @@ a particular location as determined by IP address. At the same time, we encourag
 <footer class="footer">
 <div class="container" align="center">
 <div class="row" style="color:white;font-size:15px;">
-2018-12-30 11:41:42</div>
+2019-06-06 06:39:03</div>
 <a href="faq">FAQ </a>|<a href="privacypolicy">Privacy Policy </a>|<a href="terms">Terms of Service </a>|<a href="payment">Payment Proof</a>|<a href="#" id="disclaimer">Disclaimer</a><a href="https://twitter.com/coinbulb" target="_blank"><img src="assets/images/ct.png" litter="twitter" width="65px" height="20px"></a>
 <br>
 <img src="assets/images/stamp.png" alt="contact us" width="16" height="12">&nbsp;<span id="contactus" style="text-align: center; color: white;cursor:pointer;font-weight:bold;font-size:17px;text-decoration:underline;">contact us</span>&nbsp;&nbsp;&nbsp;
 
-Copyrighted © <b>CoinBulb</b> 2016 - 2018. All rights reserved.<br>
+Copyrighted © <b>CoinBulb</b> 2016 - 2019. All rights reserved.<br>
 
 </div>
 
@@ -500,10 +501,10 @@ Copyrighted © <b>CoinBulb</b> 2016 - 2018. All rights reserved.<br>
         <h2>Contact us</h2>
         <div class="tt">
           <p class="one">Please read through our FAQ before sending us an email - we will not <br>reply to emails asking questions that have already been answered there.</p>
-            <p class="two">If your enquiry meets the conditions above then please email us at <span><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="c2b1b7b2b2adb0b682a1adabaca0b7aea0eca1adaf">[email&nbsp;protected]</a></span>.We will endeavour to reply to emails within <br>48 hours.</p>
+            <p class="two">If your enquiry meets the conditions above then please email us at <span><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="cebdbbbebea1bcba8eada1a7a0acbba2ace0ada1a3">[email&nbsp;protected]</a></span>.We will endeavour to reply to emails within <br>48 hours.</p>
         </div>
          <div class="show" style="display: none;">
-          <span><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="fa898f8a8a95888eba99959394988f9698d4999597">[email&nbsp;protected]</a></span>
+          <span><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="087b7d7878677a7c486b6761666a7d646a266b6765">[email&nbsp;protected]</a></span>
         </div>
     </div> 
 </div>
