--- a/b/bi/bin/binaryoptionstutor.com.html
+++ b/b/bi/bin/binaryoptionstutor.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the binaryoptionstutor.com privacy policy that was archived on 2018-12-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181205150912id_/http%3A//www.binaryoptionstutor.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the binaryoptionstutor.com privacy policy that was archived on 2019-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190606114408id_/http%3A//www.binaryoptionstutor.com/privacy) for the most accurate reproduction.-->
 
 <html><head>
 <title>Binary Options signals  and trading tutoring</title>
@@ -195,7 +195,9 @@ return false;
 <li><a href="http://www.binaryoptionstutor.com/view_toolbox_msp_page.php" title="Binary Options Signals FREE Tools MultiSwing Profiler for Forex">MultiSwing Profiler Forex</a></li>
 <li><a href="http://www.binaryoptionstutor.com/view_forex_news_calendar.php" title="Forex News Calendar">Forex News Calendar</a></li>
 </ul><ul>
-<div style="color:#fff;background:#060;">&nbsp;&nbsp;&nbsp;[Binary Options Tutorials]</div><li><a href="http://www.binaryoptionstutor.com/binary-options-chat-room.html"><b>Binary Options chat room</b></a></li>
+<div style="color:#fff;background:#060;">&nbsp;&nbsp;&nbsp;[Binary Options Tutorials]</div><li><a href="http://www.binaryoptionstutor.com/nadex-2-hour-trade-strategy.html"><b>Nadex 2 hour and Nadex one hour trading strategy</b></a></li>
+<li><a href="http://www.binaryoptionstutor.com/nadex-touch-brackets-strategy.html"><b>Nadex Touch Brackets Strategy</b></a></li>
+<li><a href="http://www.binaryoptionstutor.com/binary-options-chat-room.html"><b>Binary Options chat room</b></a></li>
 <li><a href="http://www.binaryoptionstutor.com/forex-volatility-qvs-indicator.html"><b>Forex Volatility QVS Indicator</b></a></li>
 <li><a href="http://www.binaryoptionstutor.com/money-management-calculator.html"><b>Money Management Calculator</b></a></li>
 <li><a href="http://www.binaryoptionstutor.com/binary-options-signals-software.html"><b>Binary Options Signals Software</b></a></li>
@@ -233,8 +235,8 @@ return false;
    <div id="sidebarRightAd">
 <center>
    <div>
-<a href="http://goo.gl/LSzthF" target="_blank">
-<img src="http://www.binaryoptionstutor.com/images/BOT_GreenArrow_Banner_160x600.png" border="0" width="160" height="600" alt="">
+<a href="http://www.binaryoptionstutor.com/binary-options-chat-room.html">
+<img src="http://www.binaryoptionstutor.com/images/BOT_WebChat_b1_160x600.png" border="0" width="160" height="600" alt="">
 </a>
 <center>
 <div style="width:160px;height:48px;">
@@ -316,7 +318,7 @@ U.S. Government Required Disclaimer - "Stocks, Options, Binary Options, Forex an
 			 </div>
 
              <div id="copyright">
-              <p>Copyright © 2018 binaryoptionstutor.com              </p>
+              <p>Copyright © 2019 binaryoptionstutor.com              </p>
              </div> <!-- /copyright -->
 
 <div align="center" id="sbv_validation_stamp-eefe0e21ebb9c9780f7b2561cb234e12"><img src="http://www.scriptbliss.com/sbv_status.php?a=1001&amp;d=binaryoptionstutor.com&amp;vs=eefe0e21ebb9c9780f7b2561cb234e12" border="0" width="160" height="32"></div>
