mxdoc.com (archived on 2019-06-06)
{
  "alexa_rank": 327100,
  "analysis_subcorpus": true,
  "categories": "business;entertainment",
  "char_count": 2636,
  "classifier_probability": 0.95,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.55,
  "homepage_snapshot_redirected_domain": "mxdoc.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20190606122314id_/https://mxdoc.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20190606122314id_/http%3A//mxdoc.com",
  "interval": "2019_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "mxdoc.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20190606122456id_/https%3A//mxdoc.com/privacy",
  "policy_title": "Privacy Policy - MXDOC.COM",
  "policy_url": "mxdoc.com/privacy",
  "sha1": "ece975c7ac9625ac4c66959ec0f4776ca2b28bc1",
  "simhash": 5552903018672070299,
  "simhash_updated": false,
  "site_hostname": "mxdoc.com",
  "site_url": "http://mxdoc.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20190606122456",
  "word_count": 420,
  "year": 2019
}

--- a/m/mx/mxd/mxdoc.com.html
+++ b/m/mx/mxd/mxdoc.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the mxdoc.com privacy policy that was archived on 2018-05-07.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20180507190302id_/https%3A//mxdoc.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the mxdoc.com privacy policy that was archived on 2019-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190606122456id_/https%3A//mxdoc.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
 <meta charset="utf-8">
@@ -17,8 +17,8 @@
             },
             "headline": "Write A Book And Publish - PDF Free Download",
             "description": "Write a book, elevate your profile, build a business - Upload ideas and beginner tips to get you started",
-            "datePublished": "2018-05-08+0702:03:03+00:00",
-            "dateModified": "2018-05-08+0702:03:03+00:00",
+            "datePublished": "2019-06-06+0719:24:57+00:00",
+            "dateModified": "2019-06-06+0719:24:57+00:00",
             "author": {
             "@type": "Person",
             "name": "Guest"            },
@@ -57,6 +57,7 @@
 <meta name="apple-mobile-web-app-status-bar-style" content="white">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="mobile-web-app-capable" content="yes">
+<meta name="propeller" content="223eb8740653878c4141fcce91fa44f4">
 <link rel="apple-touch-icon" sizes="57x57" href="https://mxdoc.com/assets/img/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="https://mxdoc.com/assets/img/apple-icon-60x60.png">
 <link rel="apple-touch-icon" sizes="72x72" href="https://mxdoc.com/assets/img/apple-icon-72x72.png">
@@ -81,13 +82,6 @@
 <link href="https://mxdoc.com/assets/css/minified.css" rel="stylesheet" type="text/css">
 <script src="https://mxdoc.com/assets/js/jquery-3.2.1.min.js"></script>
 <script src="https://mxdoc.com/assets/js/bootstrap.min.js"></script>
-<script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<script>
-	    (adsbygoogle = window.adsbygoogle || []).push({
-		google_ad_client: "ca-pub-3076706829469397",
-		enable_page_level_ads: true
-	    });
-	</script>
 </head>
 <body>
 <div class="header">
@@ -167,7 +161,7 @@ By using MXDOC.COM you signify your agreement to our privacy policy as stated ab
 </div>
 <footer class="footer" style="margin-top: 60px;">
 <div class="container-fluid">
-Copyright © 2018 MXDOC.COM. All rights reserved.
+Copyright © 2019 MXDOC.COM. All rights reserved.
 <div class="pull-right">
 <span><a href="https://mxdoc.com/about">About Us</a></span> |
 <span><a href="https://mxdoc.com/privacy">Privacy Policy</a></span> |
@@ -206,7 +200,7 @@ Copyright © 2018 MXDOC.COM. All rights reserved.
 </div>
 <button class="btn btn-primary btn-block" type="submit">Sign In</button>
 </form>
-<hr style="margin-top: 15px;">
+ <hr style="margin-top: 15px;">
 <a href="https://mxdoc.com/login/facebook" class="btn btn-facebook btn-block"><i class="fa fa-facebook"></i> Login with Facebook</a>
 <a href="https://mxdoc.com/login/google" class="btn btn-google btn-block"><i class="fa fa-google"></i> Login with Google</a>
 </div>
