--- a/n/na/nat/nationalskillsregistry.com.html
+++ b/n/na/nat/nationalskillsregistry.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the nationalskillsregistry.com privacy policy that was archived on 2017-03-24.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170324193942id_/https%3A//nationalskillsregistry.com/privacypolicy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the nationalskillsregistry.com privacy policy that was archived on 2019-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190606130053id_/http%3A//www.nationalskillsregistry.com/privacypolicy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/inside.dwt" codeOutsideHTMLIsLocked="false" --><head>
 <!-- InstanceBeginEditable name="doctitle" -->
