adexchanger.com (archived on 2019-06-06)
{
  "alexa_rank": 105077,
  "analysis_subcorpus": false,
  "categories": "business",
  "char_count": 13087,
  "classifier_probability": 0.98,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.69,
  "homepage_snapshot_redirected_domain": "adexchanger.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20190401011430id_/https://adexchanger.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20190401011430id_/http%3A//adexchanger.com",
  "interval": "2019_A",
  "link_text": "Privacy Policy //",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "accessintel.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20190606154712id_/http%3A//www.accessintel.com/privacypolicy",
  "policy_title": "Access Intelligence :: Privacy Policy",
  "policy_url": "accessintel.com/privacypolicy",
  "sha1": "21e1474dcd26c06b32755613c1a5a3bcb8bf42b4",
  "simhash": 9714916935557625590,
  "simhash_updated": true,
  "site_hostname": "adexchanger.com",
  "site_url": "http://adexchanger.com",
  "smog": 15.99,
  "strict_updated": true,
  "timestamp": "20190606154712",
  "word_count": 2092,
  "year": 2019
}

--- a/a/ad/ade/adexchanger.com.html
+++ b/a/ad/ade/adexchanger.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the adexchanger.com privacy policy that was archived on 2018-12-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181230222953id_/http%3A//www.accessintel.com/privacypolicy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the adexchanger.com privacy policy that was archived on 2019-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190606154712id_/http%3A//www.accessintel.com/privacypolicy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 	<meta http-equiv="content-type" content="text/html;charset=utf-8">
@@ -36,7 +36,13 @@
 	  <tbody><tr valign="bottom">
 		<td><a href="/index.html"><img src="/images/AI-w-New-Tagline.gif" alt="" width="340" height="150" border="0"></a></td>
         
-		<td align="right" valign="bottom"><div style="float: left; margin: 20px 0 0 30px;"><img src="/images/washpost-top-workplace-image.gif"></div><div><img src="http://aimediaserver6.com/TWP_Connecticut_South_2015_AW.jpg"></div><div class="date">Sunday, December 30th, 2018</div></td>        
+		<td align="right" valign="top">
+			<div style="padding-top: 10px;">
+				<img src="/images/2017_TW.jpg" align="top">
+				<img src="/images/2018TW.jpg" align="top" style="margin: 5px 0 0 20px;">
+			</div>
+			<div class="date">Thursday, June 6th, 2019</div>
+		</td>        
         
 	  </tr>
 	  <tr>
@@ -51,7 +57,7 @@
 	  </tr>
 	  <tr valign="bottom">
 		<td width="12"><img src="/images/nav_top/shadow_left.gif" alt="" width="12" height="25" border="0"></td>
-		<td bgcolor="#dedfe1" width="729"><a href="/" class="topnav">HOME</a><span class="sep">|</span><a href="/aboutus" class="topnav">ABOUT US</a><span class="sep">|</span><a href="/products" class="topnav">PRODUCTS &amp; SOLUTIONS</a><span class="sep">|</span><a href="/careers" class="topnav">CAREERS</a><span class="sep">|</span><a href="/pressroom" class="topnav">PRESS ROOM</a><span class="sep">|</span><a href="/contactus" class="topnav">CONTACT US</a><span class="sep">|</span><a href="/privacypolicy" class="topnav active">PRIVACY POLICY</a><span class="sep">|</span><a href="/termsandconditions" class="topnav">TERMS &amp; CONDITIONS</a></td>
+		<td bgcolor="#dedfe1" width="729"><a href="/" class="topnav">HOME</a><span class="sep">|</span><a href="/aboutus" class="topnav">ABOUT US</a><span class="sep">|</span><a href="/products" class="topnav">PRODUCTS &amp; SOLUTIONS</a><span class="sep">|</span><a href="/careers" class="topnav">CAREERS</a><span class="sep">|</span><a href="/benefits" class="topnav">BENEFITS</a><span class="sep">|</span><a href="/pressroom" class="topnav">PRESS ROOM</a><span class="sep">|</span><a href="/contactus" class="topnav">CONTACT US</a><span class="sep">|</span><a href="/privacypolicy" class="topnav active">PRIVACY POLICY</a><span class="sep">|</span><a href="/termsandconditions" class="topnav">TERMS &amp; CONDITIONS</a></td>
 		<td width="6"><img src="/images/nav_top/bg_separator.gif" alt="" width="6" height="25" border="0"></td>
 		<td bgcolor="#c0272d" width="8"><img src="/images/nada.gif" alt="" width="8" height="1" border="0"></td>
 		<td width="197">
@@ -144,8 +150,9 @@ Rockville, MD 20850<br>
 	  </tr>
 	  <tr>
 		<td align="left" width="945">
-			<a href="/" class="btmnav">HOME</a><span class="sep">|</span><a href="/aboutus" class="btmnav">ABOUT US</a><span class="sep">|</span><a href="/products" class="btmnav">PRODUCTS &amp; SOLUTIONS</a><span class="sep">|</span><a href="/careers" class="btmnav">CAREERS</a><span class="sep">|</span><a href="/pressroom" class="btmnav">PRESS ROOM</a><span class="sep">|</span><a href="/contactus" class="btmnav">CONTACT US</a><span class="sep">|</span><a href="/privacypolicy" class="btmnav active">PRIVACY POLICY</a><span class="sep">|</span><a href="/termsandconditions" class="btmnav">TERMS &amp; CONDITIONS</a><span class="sep">|</span><a href="/sitemap.html" class="btmnav">SITE MAP</a>
-            <a href="https://www.linkedin.com/company/access-intelligence/" target="_blank" style="margin-left:10px;" class="ext-link" onclick="this.target='_blank';"><img src="/images/linkedin.png" height="16" width="15" style="border: none;"></a><a href="https://twitter.com/accessintel" target="_blank" style="margin-left:10px;" class="ext-link" onclick="this.target='_blank';"><img src="/images/twitter.png" height="16" width="15" style="border: none;"></a><a href="https://www.facebook.com/AccessIntelligence" target="_blank" style="margin-left:10px;" class="ext-link" onclick="this.target='_blank';"><img src="/images/facebook.png" style="border: none;" height="16" width="15"></a><a href="https://plus.google.com/110034540896120458809/about" target="_blank" style="margin-left:10px;" class="ext-link" onclick="this.target='_blank';"><img src="/images/googleplus.png" height="16" width="15" style="border: none;"></a>
+			<a href="/" class="btmnav">HOME</a><span class="sep">|</span><a href="/aboutus" class="btmnav">ABOUT US</a><span class="sep">|</span><a href="/products" class="btmnav">PRODUCTS &amp; SOLUTIONS</a><span class="sep">|</span><a href="/careers" class="btmnav">CAREERS</a><span class="sep">|</span><a href="/benefits" class="btmnav">BENEFITS</a><span class="sep">|</span><a href="/pressroom" class="btmnav">PRESS ROOM</a><span class="sep">|</span><a href="/contactus" class="btmnav">CONTACT US</a><span class="sep">|</span><a href="/privacypolicy" class="btmnav active">PRIVACY POLICY</a><span class="sep">|</span><a href="/termsandconditions" class="btmnav">TERMS &amp; CONDITIONS</a><span class="sep">|</span><a href="/sitemap.html" class="btmnav">SITE MAP</a>
+						<a href="https://www.linkedin.com/company/access-intelligence/" target="_blank" style="margin-left:10px;" class="ext-link" onclick="this.target='_blank';"><img src="/images/linkedin.png" height="16" width="15" style="border: none;"></a><a href="https://twitter.com/accessintel" target="_blank" style="margin-left:10px;" class="ext-link" onclick="this.target='_blank';"><img src="/images/twitter.png" height="16" width="15" style="border: none;"></a><a href="https://www.facebook.com/AccessIntelligence" target="_blank" style="margin-left:10px;" class="ext-link" onclick="this.target='_blank';"><img src="/images/facebook.png" style="border: none;" height="16" width="15"></a>
+						<!-- <a href="https://plus.google.com/110034540896120458809/about" target="_blank" style="margin-left:10px;" class="ext-link" onclick="this.target='_blank';"><img src="/images/googleplus.png" height="16" width="15" style="border: none;" /></a> -->
 
 		</td>
 	  </tr>
