iatn.net (archived on 2019-06-06)
{
  "alexa_rank": 108027,
  "analysis_subcorpus": true,
  "categories": "business;informationtech",
  "char_count": 26744,
  "classifier_probability": 0.91,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.41,
  "homepage_snapshot_redirected_domain": "iatn.net",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20190330060945id_/http://www.iatn.net/",
  "homepage_snapshot_url": "https://web.archive.org/web/20190330060945id_/http%3A//iatn.net",
  "interval": "2019_A",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "iatn.net",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20190606162206id_/http%3A//www.iatn.net/privacy-policy",
  "policy_title": "Privacy Policy - iATN",
  "policy_url": "iatn.net/privacy-policy",
  "sha1": "7394ae69b67a915e5701a6301053348680c1af66",
  "simhash": 14731318847370500352,
  "simhash_updated": false,
  "site_hostname": "iatn.net",
  "site_url": "http://iatn.net",
  "smog": 14.36,
  "strict_updated": false,
  "timestamp": "20190606162206",
  "word_count": 4325,
  "year": 2019
}

--- a/i/ia/iat/iatn.net.html
+++ b/i/ia/iat/iatn.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the iatn.net privacy policy that was archived on 2018-12-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181205081550id_/http%3A//www.iatn.net/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the iatn.net privacy policy that was archived on 2019-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190606162206id_/http%3A//www.iatn.net/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 	<title>Privacy Policy - iATN</title>
@@ -18,12 +18,12 @@
 	<link media="print" rel="stylesheet" type="text/css" href="/minify/i/v/110/exp/30/f/--css--print.css/index.aspx">
 	<!--[if lt IE 8]><link rel="stylesheet" type="text/css" href="/css/ie.css" media="screen"/><![endif]-->
 	<!-- jquery, fancybox, status bar, and main.js -->
-	<script async="" src="//connect.facebook.net/en_US/fbevents.js"></script><script src="/minify/i/v/115/nomin/1/exp/30/pathsid/41/index.aspx" type="text/javascript"> </script>
-	<script src="/minify/i/v/115/exp/30/f/--includes--js--shared.js/index.aspx" type="text/javascript"> </script>
+	<script async="" src="//connect.facebook.net/en_US/fbevents.js"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script src="/minify/i/v/118/nomin/1/exp/30/pathsid/41/index.aspx" type="text/javascript"> </script>
+	<script src="/minify/i/v/118/exp/30/f/--includes--js--shared.js/index.aspx" type="text/javascript"> </script>
 
 	<!-- placeholder plugin -->
-	<script src="/minify/i/v/115/exp/30/f/--includes--jquery.placeholder.js/index.aspx" type="text/javascript"></script>
-	<link href="/minify/i/v/115/exp/30/f/--includes--jquery.placeholder.css/index.aspx" rel="stylesheet" type="text/css">
+	<script src="/minify/i/v/118/exp/30/f/--includes--jquery.placeholder.js/index.aspx" type="text/javascript"></script>
+	<link href="/minify/i/v/118/exp/30/f/--includes--jquery.placeholder.css/index.aspx" rel="stylesheet" type="text/css">
     <script src="https://use.fontawesome.com/56ffbd15f0.js"></script>
 
 	<script type="text/javascript">
@@ -85,7 +85,7 @@
 			m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
 		})(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
-	</script>
+	</script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script>
 
     <!-- Facebook Pixel Code -->
     <script>
@@ -766,14 +766,14 @@
 					<li><a href="/privacy-policy">Privacy</a></li>
 					<li><a href="/faq">FAQ</a></li>
 				</ul>
-				<span class="copyright-text">Copyright ©1995-2018 iATN. All rights reserved.<br>iATN® is a registered trademark of the International Automotive Technicians Network.</span>
+				<span class="copyright-text">Copyright ©1995-2019 iATN. All rights reserved.<br>iATN® is a registered trademark of the International Automotive Technicians Network.</span>
 			</div>
 		</div>
 	</div>
 	<!-- header -->
 	<div id="header">
 		<div id="corp">
-			<ul><li id="insert-tcorp-text" data-corp-force=""> </li></ul>
+			<ul><li id="insert-tcorp-text" data-corp-force=""><a href="#" onclick="return iATNCorp.AdClick('eBay Motors', 'Banner', 'Text', 'http://www.iatn.net/redirect?url=https%3a%2f%2fpromo.iatn.net%2fiatn-ebay%2f&amp;src=text')" title="eBay Motors - Every Part for Every Ride" class="corpLink"><span class="corpName">eBay Motors</span><br><span class="corpTagline">Every Part for Every Ride</span></a></li></ul>
 			<script type="text/javascript">iATNCorp.CheckBannerAd(true, false);</script>
 		</div>
 		<div class="area">
@@ -802,7 +802,7 @@
 
 
 			<!-- navbar -->
-			<div id="memberStatusLoginLinks"></div>
+			<div id="memberStatusLoginLinks"><a href="//www.iatn.net/login/">Login</a><a href="https://join.iatn.net">Join</a></div>
 
 			<!-- add-info -->
 			<div id="memberStatusAddInfo">
@@ -826,4 +826,4 @@
 
 
 
-</div></body></html>
+</div><div id="fancybox-tmp"></div><div id="fancybox-loading"><div></div></div><div id="fancybox-overlay"></div><div id="fancybox-wrap"><div id="fancybox-outer"><div id="fancybox-content"></div><a id="fancybox-close"></a><div id="fancybox-title"></div><a href="javascript:;" id="fancybox-left"><span class="fancy-ico" id="fancybox-left-ico"></span></a><a href="javascript:;" id="fancybox-right"><span class="fancy-ico" id="fancybox-right-ico"></span></a></div></div></body></html>
