--- a/m/mi/mik/mike18.com.html
+++ b/m/mi/mik/mike18.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the mike18.com privacy policy that was archived on 2018-12-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181205192651id_/http%3A//mike18.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the mike18.com privacy policy that was archived on 2019-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190606165306id_/http%3A//mike18.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8">
@@ -236,7 +236,7 @@
 			<p><a target="blank" href="http://www.cyberpatrol.com/">Cyber Patrol</a> | <a target="blank" href="http://www.netnanny.com/">Net Nanny</a> | <a target="blank" href="http://www.rsac.org/">RSAC Rated</a></p>
 			<p class="copyright">All models were at least 18 y.o. at the time of the depiction. Copyright © 2013 <a target="blank" href="http://BucksFactory.com">BucksFactory.com</a>. All Rights Reserved. 
 			<a target="blank" href="http://mike18.com/2257.php">18 U.S.C. 2257 Record-Keeping Requirements Compliance Statement</a> | <a target="blank" href="http://mike18.com/privacy.php">Privacy Policy</a> | <a target="blank" href="http://mike18.com/terms.php">Terms</a> | <a target="blank" href="http://mike18.com/refund.php">Refund Policy</a> | <a target="blank" href="http://mike18.com/support.php">Support</a>
-			<a target="blank" href="https://support.ccbill.com/">CCBILL support</a> | <a target="blank" href="https://epoch.com/">Epoch support</a> | <a target="blank" href="https://segpaycs.com/spsolo.aspx">SegPay support</a></p>
+			<a target="blank" href="https://support.ccbill.com/">CCBILL support</a> | <a target="blank" href="https://segpaycs.com/spsolo.aspx">SegPay support</a></p>
 			<p>Webmaster Contact: <a href="mailto:support@bucksfactory.com">support@bucksfactory.com</a> | Customer Support: <img src="http://bucksfactory.com/emails/mike18.jpg">
 			All images and photo's shown here are only for personal use and copyright protected. Any other use or distribution will be prosecuted.</p>
 			<p><a target="blank" href="http://bucksfactory.com/?wm=">WEBMASTERS CLICK HERE FOR GREAT $$$ OFFER !!!</a></p>
