--- a/m/mo/mon/mondinion.com.html
+++ b/m/mo/mon/mondinion.com.html
@@ -1,11 +1,11 @@
-<!--The following is the downloaded HTML source of the mondinion.com privacy policy that was archived on 2018-12-01.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181201024744id_/http%3A//www.mondinion.com/International_Property/def/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the mondinion.com privacy policy that was archived on 2019-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190606175540id_/http%3A//www.mondinion.com/International_Property/def/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
 <title>Privacy Policy - Mondinion.com Global Real Estate</title>
 <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
-<script async="" src="//www.google-analytics.com/analytics.js"></script><script src="https://secure.quantserve.com/quant.js" async="" type="text/javascript"></script><script type="text/javascript" async="" src="https://tag.perfectaudience.com/serve/5474c194cb10bfba650001a8.js"></script><script async="" src="//connect.facebook.net/en_US/fbds.js"></script><script async="" type="text/javascript" charset="utf-8" src="//rec.getsmartlook.com/bundle.js"></script><script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
+<script async="" src="//www.google-analytics.com/analytics.js"></script><script src="https://secure.quantserve.com/quant.js" async="" type="text/javascript"></script><script type="text/javascript" async="" src="https://tag.perfectaudience.com/serve/5474c194cb10bfba650001a8.js"></script><script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
 
 <meta name="Title" content="Privacy Policy - Mondinion.com Global Real Estate">
 <meta name="Keywords" content="privacy, real estate, properties, real estate ads, real estate listings, free propery listings, free fsbo ads, fsbo, houses, homes, lands, villas, apartments, castles, international real estate listings, real estate classifieds, real estate rentals, rent properties, real estate directory, overseas real estate portal, international real estate">
@@ -14,19 +14,12 @@
 
 <link rel="alternate" media="only screen and (max-width: 640px)" href="http://m.mondinion.com/International_Property/def/privacy/">
 <meta http-equiv="Content-Language" content="en">
-<script type="text/javascript">
-    window.smartlook||(function(d) {
-    var o=smartlook=function(){ o.api.push(arguments)},s=d.getElementsByTagName('script')[0];
-    var c=d.createElement('script');o.api=new Array();c.async=true;c.type='text/javascript';
-    c.charset='utf-8';c.src='//rec.getsmartlook.com/bundle.js';s.parentNode.insertBefore(c,s);
-    })(document);
-    smartlook('init', '5daee34b2300832bfa3a8677810223b530d34be1');
-</script>
-<link rel="stylesheet" href="http://static.mondhome.com/css/bootstrap_modal.css">
-<script src="http://static.mondhome.com/js/bootstrap_modal.js"></script>
-<link rel="stylesheet" href="http://static.mondhome.com/css/bootstrap.css">
-<script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.1/js/bootstrap.min.js"></script>
-<script src="http://static.mondhome.com/js/twitter-bootstrap-hover-dropdown.js"></script>
+
+<link rel="stylesheet" href="https://static.mondhome.com/css/bootstrap_modal.css">
+<script src="https://static.mondhome.com/js/bootstrap_modal.js"></script>
+<link rel="stylesheet" href="https://static.mondhome.com/css/bootstrap.css">
+<script src="https://netdna.bootstrapcdn.com/bootstrap/3.0.1/js/bootstrap.min.js"></script>
+<script src="https://static.mondhome.com/js/twitter-bootstrap-hover-dropdown.js"></script>
 
 <script type="text/javascript">
 	if (top.location != self.location)
@@ -37,34 +30,35 @@
 
 
 <link rel="stylesheet" type="text/css" href="/style.css">
-<link rel="stylesheet" type="text/css" href="http://static.mondhome.com/css/login.css">
+<link rel="stylesheet" type="text/css" href="https://static.mondhome.com/css/login.css">
+<link rel="stylesheet" href="/maps/neighborhood/neighborhood.css">
 
 <!-- <link rel="stylesheet" type="text/css" href="/css/style_common.css"> -->
 <!-- new start -->
-<link href="http://fonts.googleapis.com/css?family=Open+Sans:400&amp;subset=latin,latin-ext,cyrillic-ext,greek-ext,cyrillic" rel="stylesheet" type="text/css">
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:400&amp;subset=latin,latin-ext,cyrillic-ext,greek-ext,cyrillic" rel="stylesheet" type="text/css">
 <!-- new end -->
 
 
-<!-- <link href='http://fonts.googleapis.com/css?family=Open+Sans:400&subset=latin,latin-ext,cyrillic-ext,greek-ext,cyrillic' rel='stylesheet' type='text/css'> -->
+<!-- <link href='https://fonts.googleapis.com/css?family=Open+Sans:400&subset=latin,latin-ext,cyrillic-ext,greek-ext,cyrillic' rel='stylesheet' type='text/css'> -->
 <style type="text/css">
 *{font-family: 'Open Sans' !important}
 </style>
 
-<link rel="stylesheet" type="text/css" href="http://static.mondhome.com/css/style_common.css"><link rel="stylesheet" type="text/css" href="http://static.mondhome.com/interstitial/style.css">
+<link rel="stylesheet" type="text/css" href="https://static.mondhome.com/css/style_common.css"><link rel="stylesheet" type="text/css" href="https://static.mondhome.com/interstitial/style.css">
 <link href="/font-awesome/css/font-awesome.css" rel="stylesheet" type="text/css">
-<link rel="stylesheet" type="text/css" href="http://static.mondhome.com/css/flags2.css">
+<link rel="stylesheet" type="text/css" href="https://static.mondhome.com/css/flags2.css">
 
-<link rel="stylesheet" type="text/css" href="http://static.mondhome.com/interstitial/interstitial.css">
+<link rel="stylesheet" type="text/css" href="https://static.mondhome.com/interstitial/interstitial.css">
 
-<link rel="stylesheet" type="text/css" href="http://static.mondhome.com/maps/Mondinion/css/style.css" charset="utf-8">
+<link rel="stylesheet" type="text/css" href="https://static.mondhome.com/maps/Mondinion/css/style.css" charset="utf-8">
 
-<link rel="stylesheet" type="text/css" href="http://static.mondhome.com/css/jquery.lightbox-0.5.css">
-<link rel="stylesheet" type="text/css" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/themes/base/jquery-ui.css">
-
-
+<link rel="stylesheet" type="text/css" href="https://static.mondhome.com/css/jquery.lightbox-0.5.css">
+<link rel="stylesheet" type="text/css" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/themes/base/jquery-ui.css">
 
 
-<script language="JavaScript" src="http://static.mondhome.com/js/html5placeholder.jquery.js"></script>
+
+
+<script language="JavaScript" src="https://static.mondhome.com/js/html5placeholder.jquery.js"></script>
 
 <script>
 var show_tab_color='#1c2678';
@@ -133,7 +127,7 @@ jQuery(function()
 
 <script type="text/javascript">
 var thisfile="http://www.mondinion.com/js.cgi";
-var photourl="http://photos.mondinion.com/pictures";
+var photourl="http://media.mondinion.com/pictures";
 var imagephpurl="http://media.mondinion.com/image.php";
 var nphash="";
 
@@ -150,14 +144,14 @@ function addJS2Queue(src)
  // Add a script element as a child of the body
 function processAtOnload()
 {
-//	addJS2Queue("http://code.jquery.com/jquery-1.8.3.min.js");///js/jquery.min.js");
+//	addJS2Queue("https://code.jquery.com/jquery-1.8.3.min.js");///js/jquery.min.js");
 //	addJS2Queue("/js/jquery-ui.min.js");
 //	addJS2Queue("/js/jquery.lightbox-0.5.mond.1.js");
 //	addJS2Queue('http://www.mondinion.com/js/ajax9.js');
 
 	
 	addJS2Queue('https://apis.google.com/js/plusone.js');
-addJS2Queue('http://www.mondinion.com/js/fb_v6.js');
+
 }
 
  // Check for browser support of event handling capability
@@ -169,30 +163,14 @@ addJS2Queue('http://www.mondinion.com/js/fb_v6.js');
 
 
 </script>
-<script>(function() {
-  var _fbq = window._fbq || (window._fbq = []);
-  if (!_fbq.loaded) {
-    var fbds = document.createElement('script');
-    fbds.async = true;
-    fbds.src = '//connect.facebook.net/en_US/fbds.js';
-    var s = document.getElementsByTagName('script')[0];
-    s.parentNode.insertBefore(fbds, s);
-    _fbq.loaded = true;
-  }
-  _fbq.push(['addPixelId', '797355273671543']);
-})();
-window._fbq = window._fbq || [];
-window._fbq.push(['track', 'PixelInitialized', {}]);
-</script>
-<noscript><img height="1" width="1" alt="" style="display:none" src="https://www.facebook.com/tr?id=797355273671543&amp;ev=PixelInitialized" /></noscript>
 
-<!-- Begin Cookie Consent plugin by Silktide - http://silktide.com/cookieconsent -->
-<script type="text/javascript">
-    window.cookieconsent_options = {"message":"This website uses cookies to ensure you get the best experience on our website","dismiss":"Got it!","learnMore":"More info","link":"http://www.mondinion.com/International_Property/def/privacy/","theme":"light-floating"};
+<script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({
+          google_ad_client: "ca-pub-0621856606494771",
+          enable_page_level_ads: true
+     });
 </script>
-
-<script type="text/javascript" src="//s3.amazonaws.com/cc.silktide.com/cookieconsent.latest.min.js"></script>
-<!-- End Cookie Consent plugin -->
 
 </head>
 <body style="background-color:#d3d7ff;">
@@ -303,7 +281,7 @@ Sell & Advertise	</b> <b class="caret"></b></a>
 	<ul class="dropdown-menu" style='text-align:left'>
 		<li><a href="/International_Property/def/addlistingstep1/" style='text-decoration:none;'>
 List for Free		</a></li>
-		<li><a href="http://www.mondinion.net/" style='text-decoration:none;'>
+		<li><a href="https://www.mondinion.net/" style='text-decoration:none;'>
 Advertise	</a></li>
 	</ul>
 </li>
@@ -882,9 +860,9 @@ google_ad_width = 728;
 google_ad_height = 90;
 //-->
 </script>
-<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+<script type="text/javascript" src="https://pagead2.googlesyndication.com/pagead/show_ads.js">
 </script></center>
-</td></tr></tbody></table></center><br><font class="text4"><a href="http://m.mondinion.com/International_Property/def/privacy/">Switch to mobile version</a><table width="100%" border="0" style="left: 0px; width: 100%; height: 120px; background-image: url(&quot;http://static.mondhome.com/images/bg-header-f.png&quot;); background-repeat: repeat-x; position: absolute;" cellspacing="0" cellpadding="0">
+</td></tr></tbody></table></center><br><font class="text4"><a href="http://m.mondinion.com/International_Property/def/privacy/">Switch to mobile version</a><table width="100%" border="0" style="left: 0px; width: 100%; height: 120px; background-image: url(&quot;https://static.mondhome.com/images/bg-header-f.png&quot;); background-repeat: repeat-x; position: absolute;" cellspacing="0" cellpadding="0">
 <tbody><tr>
 	<td align="center" style="text-align:center">
 <center>
@@ -966,11 +944,11 @@ google_ad_height = 90;
 <center><g:plusone size="medium" href="http://www.mondinion.com/" count="true"></g:plusone>
 <br>
 
-<a href="https://www.facebook.com/Mondinion"><img src="http://static.mondhome.com/content/buttons/32/32x32-Circle-58-FB.png" border="0"></a> 
-<a href="http://plus.google.com/+Mondinion"><img src="http://static.mondhome.com/content/buttons/32/32x32-Circle-81-GP.png" border="0"></a> 
-<a href="https://twitter.com/mondinion"><img src="http://static.mondhome.com/content/buttons/32/32x32-Circle-54-TW.png" border="0"></a> 
-<a href="http://www.linkedin.com/company/2529709"><img src="http://static.mondhome.com/content/buttons/32/32x32-Circle-55-LI.png" border="0"></a> 
-<a href="http://pinterest.com/mondinion/"><img src="http://static.mondhome.com/content/buttons/32/32x32-Circle-80-P.png" border="0"></a>
+<a href="https://www.facebook.com/Mondinion"><img src="https://static.mondhome.com/content/buttons/32/32x32-Circle-58-FB.png" border="0"></a> 
+<a href="http://plus.google.com/+Mondinion"><img src="https://static.mondhome.com/content/buttons/32/32x32-Circle-81-GP.png" border="0"></a> 
+<a href="https://twitter.com/mondinion"><img src="https://static.mondhome.com/content/buttons/32/32x32-Circle-54-TW.png" border="0"></a> 
+<a href="http://www.linkedin.com/company/2529709"><img src="https://static.mondhome.com/content/buttons/32/32x32-Circle-55-LI.png" border="0"></a> 
+<a href="http://pinterest.com/mondinion/"><img src="https://static.mondhome.com/content/buttons/32/32x32-Circle-80-P.png" border="0"></a>
 
 </center>
 
@@ -1048,4 +1026,4 @@ jQuery(document).ready(function()
 	jQuery('.js-activated').dropdownHover().dropdown();
 });
 </script>
-<script src="https://apis.google.com/js/plusone.js" type="text/javascript" charset="iso8859-1"></script><script src="http://www.mondinion.com/js/fb_v6.js" type="text/javascript" charset="iso8859-1"></script></body></html>
+<script src="https://apis.google.com/js/plusone.js" type="text/javascript" charset="iso8859-1"></script></body></html>
