--- a/p/po/pow/powerbalance.com.html
+++ b/p/po/pow/powerbalance.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the powerbalance.com privacy policy that was archived on 2018-11-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181104194807id_/http%3A//www.powerbalance.com/default/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the powerbalance.com privacy policy that was archived on 2019-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190606180751id_/http%3A//www.powerbalance.com/default/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html class="no-js" lang="en"><!--<![endif]--><head>
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -134,6 +134,7 @@ optionalZipCountries = ["IR"];
     </noscript>
 			<div class="page">
 				
+
 <!-- HEADER BOF -->
 <div class="header-container">
     <div class="top-switch-bg">
@@ -184,7 +185,7 @@ optionalZipCountries = ["IR"];
 <div class="sub-wrapper">
 <ul class="level1">
 <li class="level2 nav-1-1-1 first">
-<a href="http://www.powerbalance.com/default/shop/wristbands-silicone/pro-ion-83.html">
+<a href="http://www.powerbalance.com/default/shop/wristbands-silicone/pro-ion-90.html">
 <span>PRO ION</span>
 </a>
 </li><li class="level2 nav-1-1-2">
@@ -192,19 +193,19 @@ optionalZipCountries = ["IR"];
 <span>Black Collection</span>
 </a>
 </li><li class="level2 nav-1-1-3">
-<a href="http://www.powerbalance.com/default/shop/wristbands-silicone/electric-series-85.html">
+<a href="http://www.powerbalance.com/default/shop/wristbands-silicone/electric-series-92.html">
 <span>Electric/Volt Series</span>
 </a>
 </li><li class="level2 nav-1-1-4">
-<a href="http://www.powerbalance.com/default/shop/wristbands-silicone/evolution-82.html">
+<a href="http://www.powerbalance.com/default/shop/wristbands-silicone/evolution-89.html">
 <span>Evolution</span>
 </a>
 </li><li class="level2 nav-1-1-5">
-<a href="http://www.powerbalance.com/default/shop/wristbands-silicone/viper-82.html">
+<a href="http://www.powerbalance.com/default/shop/wristbands-silicone/viper-89.html">
 <span>Viper</span>
 </a>
 </li><li class="level2 nav-1-1-6">
-<a href="http://www.powerbalance.com/default/shop/wristbands-silicone/game-day-home-away-83.html">
+<a href="http://www.powerbalance.com/default/shop/wristbands-silicone/game-day-home-away-90.html">
 <span>Game Day: Home &amp; Away</span>
 </a>
 </li><li class="level2 nav-1-1-7">
@@ -212,11 +213,11 @@ optionalZipCountries = ["IR"];
 <span>Core</span>
 </a>
 </li><li class="level2 nav-1-1-8">
-<a href="http://www.powerbalance.com/default/shop/wristbands-silicone/cypress-27.html">
+<a href="http://www.powerbalance.com/default/shop/wristbands-silicone/cypress-34.html">
 <span>Cypress</span>
 </a>
 </li><li class="level2 nav-1-1-9">
-<a href="http://www.powerbalance.com/default/shop/wristbands-silicone/neon-84.html">
+<a href="http://www.powerbalance.com/default/shop/wristbands-silicone/neon-91.html">
 <span>Neon/Swirl</span>
 </a>
 </li><li class="level2 nav-1-1-10">
@@ -275,9 +276,13 @@ optionalZipCountries = ["IR"];
 <a href="http://www.powerbalance.com/default/shop/powerup-mouthgear.html">
 <span>POWERUP Mouthgear</span>
 </a>
-</li><li class="level1 nav-1-7 last">
+</li><li class="level1 nav-1-7">
 <a href="http://www.powerbalance.com/default/shop/hologram-packs.html">
 <span>Hologram Packs</span>
+</a>
+</li><li class="level1 nav-1-8 last">
+<a href="http://www.powerbalance.com/default/shop/bundles.html">
+<span>Bundles</span>
 </a>
 </li></ol></li>
 </ul>
