overcast.fm (archived on 2019-06-06)
{
  "alexa_rank": 40417,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 6230,
  "classifier_probability": 0.97,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.1,
  "homepage_snapshot_redirected_domain": "overcast.fm",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20190331053059id_/https://overcast.fm/",
  "homepage_snapshot_url": "https://web.archive.org/web/20190331053059id_/http%3A//overcast.fm",
  "interval": "2019_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "overcast.fm",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20190606203301id_/https%3A//overcast.fm/privacy",
  "policy_title": "Overcast",
  "policy_url": "overcast.fm/privacy",
  "sha1": "874815b4fd9dd407895411dd571fac7425d18165",
  "simhash": 11589347015899366705,
  "simhash_updated": true,
  "site_hostname": "overcast.fm",
  "site_url": "http://overcast.fm",
  "smog": 13.66,
  "strict_updated": true,
  "timestamp": "20190606203301",
  "word_count": 964,
  "year": 2019
}

--- a/o/ov/ove/overcast.fm.html
+++ b/o/ov/ove/overcast.fm.html
@@ -1,19 +1,18 @@
-<!--The following is the downloaded HTML source of the overcast.fm privacy policy that was archived on 2018-12-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181219101744id_/https%3A//overcast.fm/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the overcast.fm privacy policy that was archived on 2019-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190606203301id_/https%3A//overcast.fm/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en" class="controller_main"><head>
         <title>Overcast</title>
-                                <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="apple-itunes-app" content="app-id=888422857, affiliate-data=at=11lIuy&amp;ct=smart_banner">
+                                        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon.png">
         <link rel="mask-icon" href="/img/logo-black.svg" color="#fc7e0f">
         <link rel="icon" href="/favicon.ico">
 
         <link rel="stylesheet" type="text/css" href="/pure-min-0.5.0.css">
         <link rel="stylesheet" type="text/css" href="/grids-responsive-min-0.5.0.css">
-        <link rel="stylesheet" type="text/css" href="/assets/46/main.css">
-        <script type="text/javascript" src="/assets/46/jquery.min.js"></script>
-        <script type="text/javascript" src="/assets/46/main.js"></script>
+        <link rel="stylesheet" type="text/css" href="/assets/50/main.css">
+        <script type="text/javascript" src="/assets/50/jquery.min.js"></script>
+        <script type="text/javascript" src="/assets/50/main.js"></script>
             </head>
     <body>
         <div class="nav">
@@ -54,7 +53,11 @@
 
 <p>If you subscribe to a password-protected podcast, we need to store the credentials you provide in order to keep it updated.</p>
 
-<p>We use cookies on the site and similar tokens in the app to keep you logged in. Our server software also stores basic technical information, such as your IP address.</p>
+<p>We use cookies on the site and similar tokens in the app to keep you logged in. Our server software may also store basic technical information, such as your IP address, in temporary memory or logs.</p>
+
+<h3><strong>Cloudflare</strong></h3>
+
+<p>For performance and overload protection, we direct your traffic through Cloudflare before it reaches Overcast’s servers. They have access to some basic technical information to perform this role, such as your IP address. <a href="https://www.cloudflare.com/privacypolicy/">Cloudflare’s privacy policy is here</a>.</p>
 
 <h3><strong>Twitter accounts</strong></h3>
 
@@ -130,14 +133,16 @@
 <li><strong>February 28, 2017:</strong> Added EU and international-transfer sections.</li>
 <li><strong>March 13, 2018:</strong> Added password-protected podcast support.</li>
 <li><strong>March 16, 2018:</strong> Edited various sections for clarity and brevity.</li>
+<li><strong>December 28, 2018:</strong> Added Cloudflare information.</li>
 </ul>
             </div>
         </div>
         
         <div class="footer l-box is-center">
-                        ©&nbsp;2014–2018&nbsp;Overcast&nbsp;Radio,&nbsp;LLC<br>
+                        ©&nbsp;2014–2019&nbsp;Overcast&nbsp;Radio,&nbsp;LLC<br>
             
             <a href="/privacy">Privacy Policy</a>
+            • <a href="/terms">Terms</a>
             • <a href="/contact">Contact</a>
             • <a href="/podcasterinfo">Info for Podcasters</a>
             • <a href="/forecast">Forecast</a>
